# tampi

./: .gdbinit  .gitignore  AUTHORS  CHANGELOG.md  Makefile  Makefile.am  Makefile.manual  README.md  configure.ac  mpiconditionchecker.hpp  mpitest.cc  tampi.pc.in
doc/: Doxyfile
m4/: ax_check_argobots.m4  ax_check_cpus.m4  ax_check_extrae.m4  ax_check_modes.m4  ax_check_mpi.m4  ax_check_ompss.m4  ax_cxx_compile_stdcxx_11.m4  ax_debug_mode.m4  ax_prog_mpicxx.m4  ax_var_pop.m4  ax_var_push.m4  flags.m4  lx_find_mpi.m4  modes.m4  ovni.m4  pthread.m4
src/: mpiconditionchecker.hpp  mpioverload.cc  mpioverload_fortran.cc
src/argobots/: eventual.h  genericsynccond.h  lockblock.h  lockblock.hpp  mutex.hpp  pollingcondition.h  synccondition.h
src/c/: Allgather.cpp  Allgatherv.cpp  Allreduce.cpp  Alltoall.cpp  Alltoallv.cpp  Alltoallw.cpp  Barrier.cpp  Bcast.cpp  Bsend.cpp  Exscan.cpp  Gather.cpp  Gatherv.cpp  InitFinalize.cpp  Iwait.cpp  Iwaitall.cpp  Recv.cpp  Reduce.cpp  Reducescatter.cpp  Reducescatterblock.cpp  Rsend.cpp  Scan.cpp  Scatter.cpp  Scatterv.cpp  Send.cpp  Sendrecv.cpp  Sendrecvreplace.cpp  Ssend.cpp  Utils.cpp  Wait.cpp  Waitall.cpp  allgather.cc  allgatherv.cc  allreduce.cc  alltoall.cc  alltoallv.cc  alltoallw.cc  barrier.cc  bcast.cc  exscan.cc  gather.cc  (+18 more)
src/common/: ALPI.hpp  Allocator.cpp  Allocator.hpp  CompletionManager.hpp  Declarations.hpp  Definitions.hpp  Environment.cpp  Environment.hpp  Instrument.hpp  Interface.hpp  MultiAdderQueue.hpp  Operation.cpp  Operation.hpp  OperationManager.hpp  Polling.hpp  PollingPeriodCtrl.hpp  PollingServices.hpp  RequestManager.hpp  RuntimeAPI.hpp  Symbol.hpp  Symbols.hpp  TaskContext.hpp  TaskingModel.cpp  TaskingModel.hpp  TaskingModelAPI.hpp  Ticket.hpp  TicketManager.hpp  TicketManagerCapacityCtrl.hpp  TicketManagerInternals.hpp  allocator.cc  allocator.h  allreduce.h  api_def.h  array_utils.h  array_view.h  barrier.h  bcast.h  conditionchecker.h  configuration.cc  configuration.h  (+33 more)
src/common/debug/: exceptiontracer.hpp  genericexception.hpp  mpierror.cpp  mpierrorhandler.hpp  mpierrortranslator.hpp  mpiexception.hpp
src/common/instrument/: Instrument.cpp  Instrument.hpp  OvniInstrument.hpp
src/common/mpi/: Makefile  common.h  error.h  mpicommon.h  request.h  request_fwd.h  requestset.h  requestset_fwd.h  status.h  status_fwd.h  statusset.h  statusset_fwd.h  test  test.cc  test_decl.h
src/common/polling/: Polling.hpp  PollingPeriodCtrl.cpp  PollingPeriodCtrl.hpp  SlowStartPollingPeriodCtrl.hpp
src/common/util/: ArrayView.hpp  BoostLockFreeQueue.hpp  Clock.hpp  EnvironmentVariable.hpp  Error.hpp  ErrorHandler.hpp  FixedSizeStack.hpp  LockFreeQueue.hpp  MPSCQueue.hpp  MultiLockFreeQueue.hpp  SpinLock.hpp  SpinWait.hpp  StringSupport.hpp  Utils.hpp  array_view.hpp  spin_mutex.hpp  utils.hpp
src/fortran/: Allgather.cpp  Allgatherv.cpp  Allreduce.cpp  Alltoall.cpp  Alltoallv.cpp  Alltoallw.cpp  Barrier.cpp  Bcast.cpp  Bsend.cpp  Exscan.cpp  Gather.cpp  Gatherv.cpp  InitFinalize.cpp  Iwait.cpp  Iwaitall.cpp  Recv.cpp  Reduce.cpp  Reducescatter.cpp  Reducescatterblock.cpp  Rsend.cpp  Scan.cpp  Scatter.cpp  Scatterv.cpp  Send.cpp  Sendrecv.cpp  Sendrecvreplace.cpp  Ssend.cpp  Utils.cpp  Wait.cpp  Waitall.cpp  allgather.cc  allgatherv.cc  allreduce.cc  alltoall.cc  alltoallv.cc  alltoallw.cc  barrier.cc  bcast.cc  exscan.cc  gather.cc  (+18 more)
src/include/: TAMPI.h  TAMPI_Decl.h  TAMPI_Wrappers.h  TAMPIf.h
src/nanos/: pollingchecker.h  pollingcondition.h  ticket.h
src/nanos6/: environment.h  ticket.h  ticketmutex.h  ticketqueue.h
src/nanox/: pollingcondition.h  ticket.h
test/: mpitest.c  mpitest.cc
tests/: Makefile  Makefile.omp  Makefile.ompss2  Makefile.oss  Utils.hpp  run-ompss2-tests.sh  run-tests.sh
tests/omp/: CollectiveNonBlk.cpp  MultiPrimitiveNonBlk.cpp  PrimitiveNonBlk.cpp
tests/ompss2/: CollectiveBlk.cpp  CollectiveNonBlk.cpp  DoNotExecute.cpp  DoNotExecutef.F90  HugeBlkTasks.cpp  HugeTasks.F90  HugeTasks.f90  MultiPrimitiveBlk.cpp  MultiPrimitiveNonBlk.cpp  PrimitiveBlk.cpp  PrimitiveNonBlk.cpp  PrimitiveWrappers.cpp
tests/oss/: CollectiveBlk.cpp  CollectiveNonBlk.cpp  DoNotExecute.cpp  DoNotExecutef.F90  HugeBlkTasks.cpp  HugeTasksf.F90  InitAuto.cpp  InitAutoTaskAware.cpp  InitExplicit.cpp  InitExplicitTaskAware.cpp  MultiPrimitiveBlk.cpp  MultiPrimitiveNonBlk.cpp  PrimitiveBlk.cpp  PrimitiveNonBlk.cpp  PrimitiveWrappers.cpp  ThreadDisableTaskAwareness.cpp  ThreadTaskAwareness.cpp
